[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-extensions = "^3.1.1"
django-debug-toolbar = "^3.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.8.6"
python-decouple = "^3.4"
django-split-settings = "^1.0.1"
uvicorn = "^0.13.4"
uvloop = "^0.15.2"
httptools = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
prospector = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
